新增logicserver，完成注册功能

--- a/LogicServer/CMakeLists.txt
+++ b/LogicServer/CMakeLists.txt
@@ -1,3 +1,6 @@
+﻿# CMakeList.txt: LogicServer 的 CMake 项目，在此处包括源代码并定义
+# 项目特定的逻辑。
+#
 cmake_minimum_required (VERSION 3.20)
 
 # 0. 策略设置
@@ -11,7 +14,7 @@ if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
 endif()
 set(VCPKG_TARGET_TRIPLET "x64-windows-static")
 
-project ("GateServer")
+project ("LogicServer")
 
 # 2. 静态运行时
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
@@ -29,6 +32,10 @@ find_package(jsoncpp CONFIG REQUIRED)
 find_package(Boost REQUIRED)
 find_package(Boost REQUIRED COMPONENTS filesystem system)
 find_package(unofficial-mysql-connector-cpp CONFIG REQUIRED)
+
+# 【新增】显式查找 MySQL 原生 C 库
+find_package(unofficial-libmysql CONFIG REQUIRED)
+
 find_package(gRPC CONFIG REQUIRED)
 find_package(Protobuf CONFIG REQUIRED)
 find_package(absl CONFIG REQUIRED)
@@ -39,36 +46,34 @@ find_package(lz4 CONFIG REQUIRED)
 find_package(zstd CONFIG REQUIRED)
 
 # 5. 生成
-add_executable (GateServer "src/GateServer.cpp" 
-"include/GateServer/Singleton.h"
-"include/GateServer/RedisMgr.h" 
-"src/RedisMgr.cpp" 
-"include/GateServer/CServer.h"
-"src/CServer.cpp" 
-"include/GateServer/HttpConnection.h"
-"src/HttpConnection.cpp"
-"include/GateServer/AsioIOServicePool.h"
-"src/AsioIOServicePool.cpp"
-"include/GateServer/LogicSystem.h"
-"src/LogicSystem.cpp"
-"include/GateServer/const.h" 
-"include/GateServer/ConfigMgr.h"
-"src/ConfigMgr.cpp"
-"include/GateServer/VerifyGrpcClient.h"
-"src/VerifyGrpcClient.cpp"
-"src/message.pb.cc"
-"src/message.grpc.pb.cc"
-"include/GateServer/LogicGrpcClient.h"
-"src/LogicGrpcClient.cpp"
+add_executable (LogicServer "src/LogicServer.cpp"
+"include/LogicServer/LogicServer.h"
+ "include/LogicServer/LogicServiceImpl.h"
+ "src/LogicServiceImpl.cpp"
+ "include/LogicServer/const.h"
+ "include/LogicServer/RedisMgr.h"
+ "src/RedisMgr.cpp"
+ "include/LogicServer/MysqlDao.h"
+ "src/MysqlDao.cpp"
+ "include/LogicServer/MysqlMgr.h"
+ "src/MysqlMgr.cpp"
+ "include/LogicServer/MysqlPool.h"
+ "src/MysqlPool.cpp"
+ "include/LogicServer/ConfigMgr.h"
+ "src/ConfigMgr.cpp"
+ "include/LogicServer/Singleton.h"
+
+ "src/message.pb.cc"              # Protobuf 序列化代码
+ "src/message.grpc.pb.cc"         # gRPC 服务代码
 )
 
 # 5.1 头文件路径
-target_include_directories(GateServer PRIVATE
+target_include_directories(LogicServer PRIVATE
     ${PROJECT_SOURCE_DIR}/include
 )
 
 # 6. 链接
-target_link_libraries(GateServer PRIVATE
+target_link_libraries(LogicServer PRIVATE
     # Redis
     hiredis::hiredis
     redis++::redis++_static
@@ -84,6 +89,11 @@ target_link_libraries(GateServer PRIVATE
     # MySQL Connector/C++ (JDBC API + 静态链接依赖)
     unofficial::mysql-connector-cpp::connector-jdbc
     unofficial::mysql-connector-cpp::connector
+
+    # 【新增】显式链接 MySQL C 库 (解决 LNK2019 mysql_client_find_plugin)
+    unofficial::libmysql::libmysql
+
+    #依赖库
     OpenSSL::SSL
     OpenSSL::Crypto
     ZLIB::ZLIB
@@ -113,10 +123,11 @@ target_link_libraries(GateServer PRIVATE
 # ---------------------------------------------------------
 
 # 1. 确保构建目标存在 (假设你的可执行文件叫 GateServer)
-if(TARGET GateServer)
-    add_custom_command(TARGET GateServer POST_BUILD
+if(TARGET LogicServer)
+    add_custom_command(TARGET LogicServer POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_if_different
             "${CMAKE_CURRENT_SOURCE_DIR}/config.ini"      # 源文件路径
-            "$<TARGET_FILE_DIR:GateServer>/config.ini"    # 目标路径(自动定位到exe所在目录)
+            "$<TARGET_FILE_DIR:LogicServer>/config.ini"    # 目标路径(自动定位到exe所在目录)
     )
 endif()
+
