实现重置密码功能

--- a/DBClient/CMakeLists.txt
+++ b/DBClient/CMakeLists.txt
@@ -36,6 +36,7 @@ qt_add_executable(DBClient
     userdata.h
     userdata.cpp
     usermgr.h usermgr.cpp
+    resetwidget.h resetwidget.cpp resetwidget.ui
 )
 
 # ---> 请添加这段代码 <---
