--- a/CanvasServer/config.ini
+++ b/CanvasServer/config.ini
@@ -4,7 +4,7 @@ Port = 8080
 Host=127.0.0.1
 Port=50057
 [LogicServer]
-Host=0.0.0.0
+Host=127.0.0.1
 Port=50058
 [Mysql]
 Host = 127.0.0.1
@@ -16,13 +16,13 @@ Schema = synccanvas
 Host = 127.0.0.1
 Port = 6380
 Password = 123456
-[CanvasServers]
-Name = CanvasServer1,CanvasServer2
-[CanvasServer1]
-Host = 127.0.0.1
+[SelfServer]
+Host = 0.0.0.0
 Port = 8092
 Name = CanvasServer1
 RPCPort = 50059
+[PeerServer]
+Servers = CanvasServer2
 [CanvasServer2]
 Host = 127.0.0.1
 Port = 8093
