--- a/DBClient/CMakeLists.txt
+++ b/DBClient/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(Qt6 REQUIRED COMPONENTS Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Core)
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
+find_package(Qt6 REQUIRED COMPONENTS Core)
 
 # 强制开启资源自动编译
 set(CMAKE_AUTORCC ON)
@@ -38,6 +39,7 @@ qt_add_executable(DBClient
     usermgr.h usermgr.cpp
     resetwidget.h resetwidget.cpp resetwidget.ui
     canvas.h canvas.cpp canvas.ui
+    tcpmgr.h tcpmgr.cpp
 )
 
 # ---> 请添加这段代码 <---
@@ -55,6 +57,7 @@ target_link_libraries(DBClient PRIVATE Qt6::Widgets)
 target_link_libraries(DBClient PRIVATE Qt6::Widgets)
 target_link_libraries(DBClient PRIVATE Qt6::Core)
 target_link_libraries(DBClient PRIVATE Qt6::Widgets)
+target_link_libraries(DBClient PRIVATE Qt6::Core)
 
 include(GNUInstallDirs)
 
