完成创建房间与加入房间功能

--- a/DBClient/CMakeLists.txt
+++ b/DBClient/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.19)
+
+
 project(DBClient LANGUAGES CXX)
 
 find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets Network)
@@ -8,6 +10,11 @@ find_package(Qt6 REQUIRED COMPONENTS Core)
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Core)
 find_package(Qt6 REQUIRED COMPONENTS Core)
+
+# 2. 查找 Protobuf 和 gRPC (由 vcpkg 提供)
+find_package(protobuf CONFIG REQUIRED)
+find_package(gRPC CONFIG REQUIRED)
+
 
 # 强制开启资源自动编译
 set(CMAKE_AUTORCC ON)
@@ -43,6 +50,11 @@ qt_add_executable(DBClient
     tcpmgr.h tcpmgr.cpp
     newroomdialog.h newroomdialog.cpp newroomdialog.ui
     paintscene.h paintscene.cpp
+    message.grpc.pb.cc message.grpc.pb.h message.pb.cc message.pb.h
+    message.proto
+    lobbywidget.h lobbywidget.cpp lobbywidget.ui
+    joinroomdialog.h joinroomdialog.cpp joinroomdialog.ui
+
 )
 
 # ---> 请添加这段代码 <---
@@ -55,6 +67,10 @@ target_link_libraries(DBClient
         Qt::Core
         Qt::Widgets
         Qt::Network
+
+        #链接 Google 的库
+        protobuf::libprotobuf
+        gRPC::grpc++
 )
 target_link_libraries(DBClient PRIVATE Qt6::Widgets)
 target_link_libraries(DBClient PRIVATE Qt6::Widgets)
@@ -78,9 +94,9 @@ qt_generate_deploy_app_script(
 )
 install(SCRIPT ${deploy_script})
 
-# 确保 config.ini 存在于源码目录中
-configure_file(
+# 确保 config.ini 始终复制到 .exe 所在的目录 (Debug/Release 均自动适配)
+add_custom_command(TARGET DBClient POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
     "${CMAKE_CURRENT_SOURCE_DIR}/config.ini"
-    "${CMAKE_CURRENT_BINARY_DIR}/config.ini"
-    COPYONLY
+    "$<TARGET_FILE_DIR:DBClient>/config.ini"
 )
